<resources>
    <string name="app_name">Queuer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="theme_names">
        <item>Голубая</item>
        <item>Оранжевая</item>
    </string-array>
    <string-array name="theme_values">
        <item>blue</item>
        <item>orange</item>
    </string-array>
    <string name="theme_default">blue</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_queue_admin">QueueAdminActivity</string>
    <string name="change_theme">Сменить тему</string>
    <string name="select_theme">Выберите тему</string>
    <string name="show_notifications_summary">Показывать уведомления</string>
    <string name="notifications">Уведомления</string>
    <string name="drawer_item_all_queues">Все очереди</string>
    <string name="drawer_item_my_queues">Мои очереди</string>
    <string name="title_activity_preferences">Настройки</string>
    <string name="activity_title_my_queues">Мои Очереди</string>
    <string name="hours_short">ч.</string>
    <string name="minutes_short">мин.</string>
    <string name="days_short">д.</string>
    <string name="creating_queue">Создание очереди</string>
    <string name="pleas_wait">Пожалуйста, подождите</string>
    <string name="action_create">Создать</string>
    <string name="user_limit_hint">Макс. количество человек</string>
    <string name="description_hint">Описание</string>
    <string name="title_activity_create_queue">Создать очередь</string>
    <string name="fill_required_fields">Заполните обязательные поля</string>

    <!-- Login Activity -->
    <string name="login_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="enter_action">Войти</string>
    <string name="open_registration_action">У меня нет аккаунта</string>

    <!-- Register Activity -->
    <string name="first_name_hint">Имя</string>
    <string name="last_name_hint">Фамилия</string>
    <string name="reply_password_hint">Повторите Пароль</string>
    <string name="register_action">Зарегестрироваться</string>
</resources>
