<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:clickable="true"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="64dp"
            android:src="@drawable/logo"
            android:scaleType="centerInside"/>

        <com.nbsp.queuer.widget.BoundedLinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="32dp"
            app:bounded_width="260dp"
            >
            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/login_hint"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColor="@color/white"
                android:textColorHint="#b1ffffff"
                android:theme="@style/DarkEditText"
                />

            <EditText
                android:id="@+id/first_name_input"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:singleLine="true"
                android:lines="1"
                android:hint="@string/first_name_hint"
                android:imeOptions="actionNext"
                android:textColor="@color/white"
                android:textColorHint="#b1ffffff"
                android:theme="@style/DarkEditText"
                />

            <EditText
                android:id="@+id/last_name_input"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:singleLine="true"
                android:lines="1"
                android:hint="@string/last_name_hint"
                android:imeOptions="actionNext"
                android:textColor="@color/white"
                android:textColorHint="#b1ffffff"
                android:theme="@style/DarkEditText"
                />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:imeOptions="actionNext"
                android:textColor="@color/white"
                android:textColorHint="#b1ffffff"
                android:theme="@style/DarkEditText"
                />

            <EditText
                android:id="@+id/reply_password_input"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:inputType="textPassword"
                android:hint="@string/reply_password_hint"
                android:imeOptions="actionDone"
                android:textColor="@color/white"
                android:textColorHint="#b1ffffff"
                android:theme="@style/DarkEditText"
                />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/register_action"
                style="?android:attr/borderlessButtonStyle"
                />
        </com.nbsp.queuer.widget.BoundedLinearLayout>
    </LinearLayout>
</ScrollView>